--- a/index.html
+++ b/index.html
@@ -86,7 +86,6 @@
                 </div>
                 <div class="col col-12 col-md-6 col-lg-6">
                     <img class="ps-5 mt-5 img-fluid" src="images/header-bike.png" alt="">
-                    <h1>nahid</h1>
                 </div>
             </div>
         </div>
@@ -107,7 +106,54 @@
                 <div class="my-5 px-5"><img class="img-fluid" src="images/grayscale-aplied-image.jpg" alt=""></div>
             </div>
         </section>
+
+        <!-- Latest News Section  -->
+        <section class="container mt-4">
+            <h1 class="text-center">Latest News</h1>
+
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 mt-4">
+                <div class="col">
+                    <div class="card h-100 border-0">
+                        <img src="images/bike-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Ducati XDIAVEL S-73</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="ms-2">
+                            <button class="btn btn-danger">Read More</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <div class="card h-100 border-0">
+                        <img src="images/bike-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Motorcycles & Scooters</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                        </div>
+                        <div class="ms-2">
+                            <button class="btn btn-outline-danger">Read More</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <div class="card h-100 border-0">
+                        <img src="images/bike-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">2021 Honda CR500r</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                        </div>
+                        <div class="ms-2">
+                            <button class="btn btn-outline-danger">Read More</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         
+        <!-- Happy Client Section  -->
     </main>
 
     <footer>
