added client section

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     custom css link
     --------------  -->
     <link rel="stylesheet" href="css/style.css">
+
+    <!-- font awsome icon link  -->
+    <script src="https://kit.fontawesome.com/c60690d083.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -154,6 +157,68 @@
         </section>
         
         <!-- Happy Client Section  -->
+        <section class="container justify-content-center">
+            <h1 class="text-center mt-5">Happy Clients Sayas</h1>
+
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 mt-3">
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="images/user-1.png" class="card-img-top p-5 pt-2 pb-0" height="" width="149" alt="...">
+                        <div class="card-body p-5 mt-0">
+                            <p class="card-text mt-0 pt-0 text-center">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <div class="text-center mb-2">
+                            <i class="fa-solid fa-star text-danger mx-1"></i>
+                            <i class="fa-solid fa-star text-danger mx-1"></i>
+                            <i class="fa-solid fa-star text-danger mx-1"></i>
+                            <i class="fa-solid fa-star text-danger mx-1"></i>
+                            <i class="fa-regular fa-star text-danger mx-1"></i>
+                        </div>
+                        <p class="text-primary text-center">Regina Miles</p>
+                        <p class="fw-bold text-center mb-0">Banker</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="images/user-2.png" class="card-img-top p-5 pt-2 pb-0" height="" width="149" alt="...">
+                        <div class="card-body p-5 mt-0">
+                            <p class="card-text mt-0 pt-0 text-center">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <div class="text-center mb-2">
+                                <i class="fa-solid fa-star text-danger mx-1"></i>
+                                <i class="fa-solid fa-star text-danger mx-1"></i>
+                                <i class="fa-solid fa-star text-danger mx-1"></i>
+                                <i class="fa-solid fa-star text-danger mx-1"></i>
+                                <i class="fa-regular fa-star text-danger mx-1"></i>
+                            </div>
+                            <p class="text-primary text-center">Regina Miles</p>
+                            <p class="fw-bold text-center mb-0">Banker</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="images/user-3 resized.jpg" class="card-img-top p-5 pt-2 pb-0 rounded-circle ratio ratio-1x1 img-fluid" alt="...">
+                        <div class="card-body p-5 mt-0">
+                            <p class="card-text mt-0 pt-0 text-center">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <div class="text-center mb-2">
+                                <i class="fa-solid fa-star text-danger mx-1"></i>
+                                <i class="fa-solid fa-star text-danger mx-1"></i>
+                                <i class="fa-solid fa-star text-danger mx-1"></i>
+                                <i class="fa-solid fa-star text-danger mx-1"></i>
+                                <i class="fa-regular fa-star text-danger mx-1"></i>
+                            </div>
+                            <p class="text-primary text-center">Regina Miles</p>
+                            <p class="fw-bold text-center mb-0">Banker</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
+        <section>
+            <h1 class="text-center mt-5">Frequently Asked Question</h1>
+        </section>
     </main>
 
     <footer>
