--- a/index.html
+++ b/index.html
@@ -280,8 +280,10 @@
         </section>
     </main>
 
-    <footer class="bg-dark mt-5">
-        <h1>nahid</h1>
+    <footer class="bg-dark mt-5 p-4">
+        <div class="container text-center">
+            <small class="text-white-50">@2020 all-right reserved</small>
+        </div>
     </footer>
 
     <!-- javascript link for using bootstrap  -->
